syntax = "proto3";
package payment_package;

service Payment {
  rpc CreateCheckoutSession(CheckoutSessionRequest) returns (CheckoutSessionResponse) {}
  rpc ProcessWalletPayment(WalletPaymentRequest) returns (WalletPaymentResponse) {}
  rpc ProcessCashPayment(CashPaymentRequest) returns (CashPaymentResponse) {}
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse) {}
}

message CheckoutSessionRequest {
  string bookingId = 1;
  string userId = 2;
  string driverId = 3;
  double amount = 4;
}

message CheckoutSessionResponse {
  string sessionId = 1;
  string message = 2;
}

message WalletPaymentRequest {
  string bookingId = 1;
  string userId = 2;
  string driverId = 3;
  double amount = 4;
}

message WalletPaymentResponse {
  string transactionId = 1;
  string message = 2;
}

message CashPaymentRequest {
  string bookingId = 1;
  string userId = 2;
  string driverId = 3;
  double amount = 4;
}

message CashPaymentResponse {
  string transactionId = 1;
  string message = 2;
}

message GetTransactionRequest {
  string transactionId = 1;
}

message GetTransactionResponse {
  string transactionId = 1;
  string bookingId = 2;
  string userId = 3;
  string driverId = 4;
  double amount = 5;
  string paymentMethod = 6;
  string status = 7;
  string createdAt = 8;
}